feat: make waypaper a float

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -164,6 +164,8 @@ windowrule = size 300 300, title:polkit-gnome-authentication-agent-1
 windowrule = float, class:^(io.bassi.Amberol)$
 windowrule = size 300 300, class:^(io.bassi.Amberol)$
 windowrule = float, title:Genymotion Player
+windowrule = size 300 700, class:^(waypaper)$
+windowrule = float, class:^(waypaper)$
 windowrule = float, title:Volume Control
 windowrule = size, 300 700 title:Volume Control
 windowrule = float, title:^(Smile)$
@@ -230,7 +232,7 @@ bind=SUPER,M,exit
 bind=SUPER,SPACE,exec,rofi -show run
 bind=SUPER,W,exec,rofi -show window -theme ~/.config/rofi/launcher.rasi
 bind=SUPER,PERIOD,exec,pkill fuzzel || ~/.config/fuzzel/fuzzel-emoji
-bind=CTRL+SUPER+ALT,SPACE,exec,rofi -show menu -theme ~/.config/rofi/powermenu.rasi -modi 'menu:rofi-power-menu --choices=shutdown/reboot/logout/hibernate'
+bind=CTRL+SUPER,W,exec,waypaper
 bind=SUPER,B,exec,chromium
 bind=ALT,B,exec,firefox
 bind=ALT,C,exec,chromium --app='https://chatgpt.com'
