fix: waypaper merge conflict

--- a/waypaper/config.ini
+++ b/waypaper/config.ini
@@ -2,7 +2,7 @@
 language = en
 folder = ~/Pictures/wals
 monitors = All
-wallpaper = ~/Pictures/wals/bluegirls.png
+wallpaper = ~/Pictures/wals/bitch.png
 show_path_in_tooltip = True
 backend = swww
 fill = fill
@@ -12,9 +12,9 @@ subfolders = False
 all_subfolders = False
 show_hidden = False
 show_gifs_only = False
-post_command = matugen image $wallpaper 
+post_command = matugen image $wallpaper && hyprshade on blue-light-filter
 number_of_columns = 3
-swww_transition_type = any
+swww_transition_type = simple
 swww_transition_step = 90
 swww_transition_angle = 0
 swww_transition_duration = 2
