--- a/matugen/templates/matugen-tmux.conf
+++ b/matugen/templates/matugen-tmux.conf
@@ -3,6 +3,8 @@ set  -g base-index      1
 setw -g pane-base-index 1
 set  -g default-shell "/usr/bin/fish"
 
+set -g default-terminal "screen-256color"
+
 set -g status-keys vi
 set -g mode-keys   vi
 
@@ -37,8 +39,10 @@ bind v split-window -v -c "#{pane_current_path}"
 bind h split-window -h -c "#{pane_current_path}"
 
 set-option -g @main_accent "{{ colors.primary_container.default.hex }}"
-set-option -g @window_color "#{{ colors.surface_bright.default.hex_stripped }}" 
-set-option -g @indicator_color "#{{ colors.primary_fixed.default.hex_stripped }}"
+set-option -g @window_color "{{ colors.surface_bright.default.hex }}" 
+set-option -g @indicator_color "{{ colors.tertiary.default.hex }}"
+set-option -g @on_tertiary_fixed "{{ colors.on_tertiary_fixed.default.hex }}"
+set-option -g @text "{{ colors.on_secondary_container.default.hex }}"
 set-option -g pane-active-border fg=black
 set-option -g pane-border-style fg=black
 set-option -g status-style "bg=default fg=default"
@@ -46,11 +50,20 @@ set-option -g status-style "bg=default fg=default"
 
 set-option -g status-left-style none
 set -g status-left-length 60
-set -g status-left '#[fg=default,bg=@main_accent]'
+# set -g status-left '#[fg=default,bg=@main_accent]'
+# set-option -g status-left '#{?client_prefix,#[bg=#{@indicator_color},fg=#{@main_accent}],#[bg=#{@main_accent},fg=#{@indicator_color}]} #S'
+#
+set-option -g status-left "#[reverse,bg=#{@main_accent},fg=#{@indicator_color}]#{?client_prefix, , } #[fg=#{@text},bg=#{@main_accent}] #S "
+# set-option -g status-left '#{?client_prefix,#[fg=#{@text},bg=#{@indicator_color}],#[fg=#{@text},bg=#{@main_accent}]}  #[fg=#{@text},bg=#{@main_accent}] #S'
+# set -g status-left '#{?client_prefix,#[bg=red],}P#[default] [#{session_name}] '
+
+
+# #[fg={{ colors.on_primary_container.default.hex }},bg={{ colors.primary_container.default.hex}}] #S "
+# set-option -g status-left '#{?client_prefix,#[fg=#ff5555,bg=default],#[fg=#aaffaa,bg=default]} #[fg={{ colors.on_primary_container.default.hex }},bg={{ colors.primary_container.default.hex }}] #S'
 
 set-option -g status-right-style none
 set -g status-right-length 120
-set -g status-right '#[fg=default,bg=@main_accent]  #[fg=color15,bg=@main_accent] #W #[fg=default,bg=@main_accent]  #[fg=color15,bg=@main_accent] #{p:pane_current_path} #[fg=default,bg=@main_accent]  #[fg={{ colors.on_primary_container.default.hex }},bg={{ colors.primary_container.default.hex}}] #S '
+set -g status-right '#[fg=white]#(if git -C "#{pane_current_path}" rev-parse --is-inside-work-tree 2>/dev/null; then echo "  on #[fg=#{@text}]$(git -C "#{pane_current_path}" rev-parse --abbrev-ref HEAD)"; fi) #[fg=#{@main_accent}] #[fg=default,bg=#{@main_accent}]  #[fg=color15,bg=default] #W #[fg=default,bg=#{@main_accent}]  #[fg=#{@text},bg=default] #{p:pane_current_path} #[fg=default,bg=@main_accent] %H #[fg=#{@text},bg=#{@main_accent}] %M '
 
 set -g window-status-separator "#[bg=default] "
 set -g window-status-current-format "#[fg=color15,bg=color8] #W #[fg=color0,bg=color2] #I "
