--- a/matugen/templates/matugen-starship.toml
+++ b/matugen/templates/matugen-starship.toml
@@ -6,7 +6,6 @@ add_newline = true
 # $character
 # """
 format = """
-$cmd_duration$directory $git_branch
 $character
 """
 
@@ -16,33 +15,6 @@ error_symbol = "[ 󰅙](bold fg:{{colors.error.default.hex}})"
 
 [package]
 disabled = true
-
-[git_branch]
-style = "bg:{{colors.primary_container.default.hex}}"
-symbol = "󰘬"
-truncation_length = 4
-truncation_symbol = ""
-format = "• [](bold fg:{{colors.primary_container.default.hex}})[$symbol $branch(:$remote_branch)](fg:{{colors.on_primary_container.default.hex}} bg:{{colors.primary_container.default.hex}})[ ](bold fg:{{colors.primary_container.default.hex}})"
-
-[git_commit]
-commit_hash_length = 4
-tag_symbol = " "
-
-[git_state]
-format = '[\($state( $progress_current of $progress_total)\)]($style) '
-cherry_pick = "[🍒 PICKING](bold {{colors.error.default.hex}})"
-
-[git_status]
-conflicted = " 🏳 "
-ahead = " 🏎💨 "
-behind = " 😰 "
-diverged = " 😵 "
-untracked = " 🤷 ‍"
-stashed = " 📦 "
-modified = " 📝 "
-staged = '[++\($count\)]({{colors.primary.default.hex}})'
-renamed = " ✍️ "
-deleted = " 🗑 "
 
 [hostname]
 ssh_only = false
@@ -71,23 +43,7 @@ format = "[](bold fg:{{colors.secondary_container.default.hex}})[$user]($styl
 disabled = false
 show_always = true
 
-[directory]
-home_symbol = "  "
-read_only = "  "
-style = "bg:{{colors.tertiary_container.default.hex}} fg:{{colors.on_tertiary_container.default.hex}}"
-truncation_length = 6
-truncation_symbol = "••/"
-format = '[](bold fg:{{colors.tertiary_container.default.hex}})[$path ](bold bg:{{colors.tertiary_container.default.hex}} fg:{{colors.on_tertiary_container.default.hex}})[](bold fg:{{colors.tertiary_container.default.hex}})'
-
-[directory.substitutions]
-"Desktop" = "  "
-"Documents" = "  "
-"Downloads" = "  "
-"Music" = " 󰎈 "
-"Pictures" = "  "
-"Videos" = "  "
-
 [cmd_duration]
 min_time = 0
-format = '[](bold fg:{{colors.secondary.default.hex}})[ $duration](bold bg:{{colors.secondary.default.hex}} fg:{{colors.on_secondary.default.hex}})[](bold fg:{{colors.secondary.default.hex}}) •• '
+format = '[ •• ](bold fg:{{colors.secondary.default.hex}})[ $duration](bold bg:transparent fg:{{colors.on_secondary.default.hex}})'
 
