--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -14,7 +14,7 @@
 	"fixed-center": true,
 	"ipc": true,
 	"custom/menu": {
-		// "format": "",
+		"format": "",
 		"format": "",
 		"on-click": "rofi -show drun -theme ~/.config/rofi/launcher.rasi",
 		"tooltip": false
@@ -89,10 +89,16 @@
 	"tray": {
 		"spacing": 5
 	},
+	"idle_inhibitor": {
+    "format": "{icon}",
+    "format-icons": {
+        "activated": "",
+        "deactivated": ""
+    }
+  },
 	"custom/swaync": {
-		"tooltip": true,
-		"tooltip-format": "Notification Center",
-		"format": "{}\n{icon}",
+		"tooltip": false,
+		"format": "{icon}",
 		"format-icons": {
 			"notification": "<span foreground='red'><sup></sup></span>",
 			"none": "",
@@ -112,8 +118,8 @@
 	},
 	"battery": {
 		//"interval": 5,
-		"align": 0,
-		"rotate": 0,
+		// "align": 0,
+		// "rotate": 0,
 		//"bat": "BAT1",
 		//"adapter": "ACAD",
 		"full-at": 100,
@@ -142,6 +148,37 @@
 		],
 		"tooltip": false
 	},
+	// "battery": {
+	//    // "bat": "BAT0",
+	//    "format": "{icon}<span size='10pt'><b>{capacity}</b></span>",
+	//    "format-critical": "<span font_family='JetBrainsMono Nerd Font' color='#f38ba8'>{icon}</span><small><b>{capacity}</b></small>",
+	//    "format-good": "<span font_family='JetBrainsMono Nerd Font' color='#a6e3a1'>{icon}</span><small><b>{capacity}</b></small>",
+	//    "format-icons": [
+	//      "󰛞 󱢠 󱢠 󱢠 󱢠 ",
+	//      "󰣐 󱢠 󱢠 󱢠 󱢠 ",
+	//      "󰣐 󰛞 󱢠 󱢠 󱢠 ",
+	//      "󰣐 󰣐 󱢠 󱢠 󱢠 ",
+	//      "󰣐 󰣐 󰛞 󱢠 󱢠 ",
+	//      "󰣐 󰣐 󰣐 󱢠 󱢠 ",
+	//      "󰣐 󰣐 󰣐 󰛞 󱢠 ",
+	//      "󰣐 󰣐 󰣐 󰣐 󱢠 ",
+	//      "󰣐 󰣐 󰣐 󰣐 󰛞 ",
+	//      "󰣐 󰣐 󰣐 󰣐 󰣐 "
+	//    ],
+	//    "format-time": "{H}hr & {m}min",
+	//    "format-warning": "<span font_family='JetBrainsMono Nerd Font' color='#f9e2af'>{icon}</span><small><b>{capacity}</b></small>",
+	//    "interval": 60,
+	//    "max-length": 25,
+	//    "states": {
+	//      "critical": 15,
+	//      "good": 100,
+	//      "warning": 30
+	//    },
+	//    "tooltip-format": "{time} (󰚥 plugged), at {capacity}%",
+	//    "tooltip-format-charging": "{time} (󰢟 charging), at {capacity}%",
+	//    "tooltip-format-discharging": "{time} (󱧦 discharging), at {capacity}%"
+	//  },
+
 	"modules-left": [
 		"custom/menu",
 		"cpu",
@@ -156,6 +193,7 @@
 	"modules-right": [
 		"bluetooth",
 		"tray",
+		"idle_inhibitor",
 		"custom/swaync",
 		"battery"
 	]
