refactor: minor changes

--- a/hypr/hyprland/hyprland.conf
+++ b/hypr/hyprland/hyprland.conf
@@ -233,7 +233,7 @@ bind=SUPER,M,exit
 bind=SUPER,SPACE,exec,rofi -show run
 bind=SUPER,W,exec,rofi -show window -theme ~/.config/rofi/launcher.rasi
 bind=SUPER,PERIOD,exec,pkill fuzzel || ~/.config/fuzzel/fuzzel-emoji
-bind=CTRL+SUPER,W,exec,waypaper
+bind=CTRL+SUPER,T,exec,waypaper
 bind=SUPER,B,exec,chromium
 bind=ALT,B,exec,firefox
 bind=ALT,C,exec,chromium --app='https://chatgpt.com'
