--- a/matugen/templates/matugen-tmux.conf
+++ b/matugen/templates/matugen-tmux.conf
@@ -39,6 +39,11 @@ bind v split-window -v -c "#{pane_current_path}"
 bind h split-window -h -c "#{pane_current_path}"
 
 set-option -g @main_accent "{{ colors.primary_container.default.hex }}"
+set-option -g @main_text "{{ colors.on_primary_container.default.hex }}"
+set-option -g @secondary_accent "{{ colors.secondary_container.default.hex }}"
+set-option -g @secondary_text "{{ colors.on_secondary_container.default.hex }}"
+set-option -g @tertiary_accent "{{ colors.tertiary_container.default.hex }}"
+set-option -g @tertiary_text "{{ colors.on_tertiary_container.default.hex }}"
 set-option -g @window_color "{{ colors.surface_bright.default.hex }}" 
 set-option -g @indicator_color "{{ colors.tertiary.default.hex }}"
 set-option -g @on_tertiary_fixed "{{ colors.on_tertiary_fixed.default.hex }}"
@@ -53,7 +58,7 @@ set -g status-left-length 60
 # set -g status-left '#[fg=default,bg=@main_accent]'
 # set-option -g status-left '#{?client_prefix,#[bg=#{@indicator_color},fg=#{@main_accent}],#[bg=#{@main_accent},fg=#{@indicator_color}]} #S'
 #
-set-option -g status-left "#[reverse,bg=#{@main_accent},fg=#{@indicator_color}]#{?client_prefix, , } #[fg=#{@text},bg=#{@main_accent}] #S "
+set-option -g status-left "#[bg=#{@tertiary_accent},fg=#{@tertiary_text}]#{?client_prefix, , } #[fg=#{@main_text},bg=#{@main_accent}] #S "
 # set-option -g status-left '#{?client_prefix,#[fg=#{@text},bg=#{@indicator_color}],#[fg=#{@text},bg=#{@main_accent}]}  #[fg=#{@text},bg=#{@main_accent}] #S'
 # set -g status-left '#{?client_prefix,#[bg=red],}P#[default] [#{session_name}] '
 
@@ -63,7 +68,7 @@ set-option -g status-left "#[reverse,bg=#{@main_accent},fg=#{@indicator_color}]#
 
 set-option -g status-right-style none
 set -g status-right-length 120
-set -g status-right '#[fg=white]#(if git -C "#{pane_current_path}" rev-parse --is-inside-work-tree 2>/dev/null; then echo "  on #[fg=#{@text}]$(git -C "#{pane_current_path}" rev-parse --abbrev-ref HEAD)"; fi) #[fg=#{@main_accent}] #[fg=default,bg=#{@main_accent}]  #[fg=color15,bg=default] #W #[fg=default,bg=#{@main_accent}]  #[fg=#{@text},bg=default] #{p:pane_current_path} #[fg=default,bg=@main_accent] %H #[fg=#{@text},bg=#{@main_accent}] %M '
+set -g status-right '#[fg=white]#(if git -C "#{pane_current_path}" rev-parse --is-inside-work-tree 2>/dev/null; then echo "  on #[fg=#{@text}]$(git -C "#{pane_current_path}" rev-parse --abbrev-ref HEAD)"; fi) #[fg=#{@main_accent}] #[fg=default,bg=#{@main_accent}]  #[fg=#{@tertiary_text},bg=#{@tertiary_accent}] #W #[fg=default,bg=#{@main_accent}]  #[fg=#{@text},bg=default] #{p:pane_current_path} #[fg=#{@tertiary_text},bg=#{@tertiary_accent}] %H #[fg=#{@main_text},bg=#{@main_accent}] %M '
 
 set -g window-status-separator "#[bg=default] "
 set -g window-status-current-format "#[fg=color15,bg=color8] #W #[fg=color0,bg=color2] #I "
