--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -18,28 +18,28 @@ lines=10000
 style=beam
 blink=no
 beam-thickness=1.5
-color=534341 f1dfdb
+color=47464f e4e1e9
 # underline-thickness=<font underline thickness>
 [colors]
 alpha=0.75
-background=1a1110
-foreground=f1dfdb
-regular0=1a1110
+background=131318
+foreground=e4e1e9
+regular0=131318
 regular1=ffb4ab
-regular2=ffb4a7
-regular3=dec48c
-regular4=ffdad4
-regular5=ffdad4
-regular6=e7bdb6
-regular7=f1dfdb
-bright0=423735
+regular2=c1c1ff
+regular3=e9b9d2
+regular4=e2dfff
+regular5=e2e0f9
+regular6=c6c4dd
+regular7=e4e1e9
+bright0=39383f
 bright1=ffb4ab
-bright2=ffb4a7
-bright3=dec48c
-bright4=ffdad4
-bright5=ffdad4
-bright6=e7bdb6
-bright7=f1dfdb
+bright2=c1c1ff
+bright3=e9b9d2
+bright4=e2dfff
+bright5=e2e0f9
+bright6=c6c4dd
+bright7=e4e1e9
 dim0=45475A 
 dim1=F38BA8 
 dim2=A6E3A1 
@@ -48,8 +48,8 @@ dim4=89B4FA
 dim5=F5C2E7 
 dim6=94E2D5 
 dim7=BAC2DE 
-selection-foreground=ffb4a7
-selection-background=561e16
+selection-foreground=c1c1ff
+selection-background=2a2a60
 
 
 [key-bindings]
