--- a/matugen/templates/matugen-starship.toml
+++ b/matugen/templates/matugen-starship.toml
@@ -6,6 +6,7 @@ add_newline = true
 # $character
 # """
 format = """
+$hostname $username $directory
 $character
 """
 
@@ -17,7 +18,7 @@ error_symbol = "[ 󰅙](bold fg:{{colors.error.default.hex}})"
 disabled = true
 
 [hostname]
-ssh_only = false
+ssh_only = true
 format = "[•$hostname](bg:{{colors.secondary_container.default.hex}} bold fg:{{colors.on_secondary_container.default.hex}})[](bold fg:{{colors.primary_container.default.hex}})"
 trim_at = ".companyname.com"
 disabled = false
@@ -37,11 +38,27 @@ format = '🕙[\[ $time \]]($style) '
 time_format = "%T"
 
 [username]
-style_user = "bold bg:{{colors.secondary_container.default.hex}} fg:{{colors.on_secondary_container.default.hex}}"
-style_root = "bold {{colors.error.default.hex}}"
-format = "[](bold fg:{{colors.secondary_container.default.hex}})[$user]($style)"
+style_user = "bg:default fg:{{ colors.primary.default.hex }}"
+style_root = "bg:default fg:{{colors.error.default.hex}}"
+format = "([$user]($style))"
 disabled = false
 show_always = true
+
+[directory]
+home_symbol = "  "
+read_only = "  "
+style = "bg:default fg:default"
+truncation_length = 6
+truncation_symbol = "••/"
+format = '([ @ ](bg:default fg:{{ colors.error_container.default.hex }}) [$path ]($style))'
+
+[directory.substitutions]
+"Desktop" = "  "
+"Documents" = "  "
+"Downloads" = "  "
+"Music" = " 󰎈 "
+"Pictures" = "  "
+"Videos" = "  "
 
 [cmd_duration]
 min_time = 0
