--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -38,11 +38,16 @@ bind-key b set-option status
 bind v split-window -v -c "#{pane_current_path}"
 bind h split-window -h -c "#{pane_current_path}"
 
-set-option -g @main_accent "#73342a"
-set-option -g @window_color "#423735" 
-set-option -g @indicator_color "#dec48c"
-set-option -g @on_tertiary_fixed "#251a00"
-set-option -g @text "#ffdad4"
+set-option -g @main_accent "#414178"
+set-option -g @main_text "#e2dfff"
+set-option -g @secondary_accent "#454559"
+set-option -g @secondary_text "#e2e0f9"
+set-option -g @tertiary_accent "#5f3c51"
+set-option -g @tertiary_text "#ffd8eb"
+set-option -g @window_color "#39383f" 
+set-option -g @indicator_color "#e9b9d2"
+set-option -g @on_tertiary_fixed "#2f1124"
+set-option -g @text "#e2e0f9"
 set-option -g pane-active-border fg=black
 set-option -g pane-border-style fg=black
 set-option -g status-style "bg=default fg=default"
@@ -53,17 +58,17 @@ set -g status-left-length 60
 # set -g status-left '#[fg=default,bg=@main_accent]'
 # set-option -g status-left '#{?client_prefix,#[bg=#{@indicator_color},fg=#{@main_accent}],#[bg=#{@main_accent},fg=#{@indicator_color}]} #S'
 #
-set-option -g status-left "#[reverse,bg=#{@main_accent},fg=#{@indicator_color}]#{?client_prefix, , } #[fg=#{@text},bg=#{@main_accent}] #S "
+set-option -g status-left "#[bg=#{@tertiary_accent},fg=#{@tertiary_text}]#{?client_prefix, , } #[fg=#{@main_text},bg=#{@main_accent}] #S "
 # set-option -g status-left '#{?client_prefix,#[fg=#{@text},bg=#{@indicator_color}],#[fg=#{@text},bg=#{@main_accent}]}  #[fg=#{@text},bg=#{@main_accent}] #S'
 # set -g status-left '#{?client_prefix,#[bg=red],}P#[default] [#{session_name}] '
 
 
-# #[fg=#ffdad4,bg=#73342a] #S "
-# set-option -g status-left '#{?client_prefix,#[fg=#ff5555,bg=default],#[fg=#aaffaa,bg=default]} #[fg=#ffdad4,bg=#73342a] #S'
+# #[fg=#e2dfff,bg=#414178] #S "
+# set-option -g status-left '#{?client_prefix,#[fg=#ff5555,bg=default],#[fg=#aaffaa,bg=default]} #[fg=#e2dfff,bg=#414178] #S'
 
 set-option -g status-right-style none
 set -g status-right-length 120
-set -g status-right '#[fg=white]#(if git -C "#{pane_current_path}" rev-parse --is-inside-work-tree 2>/dev/null; then echo "  on #[fg=#{@text}]$(git -C "#{pane_current_path}" rev-parse --abbrev-ref HEAD)"; fi) #[fg=#{@main_accent}] #[fg=default,bg=#{@main_accent}]  #[fg=color15,bg=default] #W #[fg=default,bg=#{@main_accent}]  #[fg=#{@text},bg=default] #{p:pane_current_path} #[fg=default,bg=@main_accent] %H #[fg=#{@text},bg=#{@main_accent}] %M '
+set -g status-right '#[fg=white]#(if git -C "#{pane_current_path}" rev-parse --is-inside-work-tree 2>/dev/null; then echo "  on #[fg=#{@text}]$(git -C "#{pane_current_path}" rev-parse --abbrev-ref HEAD)"; fi) #[fg=#{@main_accent}] #[fg=default,bg=#{@main_accent}]  #[fg=#{@tertiary_text},bg=#{@tertiary_accent}] #W #[fg=default,bg=#{@main_accent}]  #[fg=#{@text},bg=default] #{p:pane_current_path} #[fg=#{@tertiary_text},bg=#{@tertiary_accent}] %H #[fg=#{@main_text},bg=#{@main_accent}] %M '
 
 set -g window-status-separator "#[bg=default] "
 set -g window-status-current-format "#[fg=color15,bg=color8] #W #[fg=color0,bg=color2] #I "
