--- a/waypaper/config.ini
+++ b/waypaper/config.ini
@@ -12,7 +12,7 @@ subfolders = False
 all_subfolders = False
 show_hidden = False
 show_gifs_only = False
-post_command = matugen image $wallpaper && hyprshade on blue-light-filter
+post_command = matugen image $wallpaper; tmux source-file ~/.config/tmux/tmux.conf
 number_of_columns = 3
 swww_transition_type = simple
 swww_transition_step = 90
